style.css
body {
    background-color: black;
    font-family: monospace;
    color: white;
}


@font-face {
    font-family: "Sinistre-StCaroline";
    src: url("Sinistre/web/Sinistre-StCaroline.woff2") format("woff2"),
        url("Sinistre/web/Sinistre-StCaroline.woff") format("woff");
}
@keyframes rainbow {
    0% {
        text-shadow: 0px 0px 2px #fff,
            -4px 4px 3px #ef3550,
            -8px 8px 3px #f48fb1,
            -12px 12px 3px #7e57c2,
            -16px 16px 3px #2196f3,
            -20px 20px 3px #26c6da,
            -24px 24px 3px #43a047,
            -28px 28px 3px #eeff41,
            -32px 32px 3px #f9a825,
            -36px 36px 3px #ff5722;
    }

    15% {
        text-shadow: 0px 0px 2px #fff,
            -8px 8px 3px #ef3550,
            -12px 12px 3px #f48fb1,
            -16px 16px 3px #7e57c2,
            -20px 20px 3px #2196f3,
            -24px 24px 3px #26c6da,
            -28px 28px 3px #43a047,
            -32px 32px 3px #eeff41,
            -36px 36px 3px #f9a825,
            -36px 36px 3px #ff5722;
    }

    30% {
        text-shadow: 0px 0px 2px #fff,
            -4px 4px 3px #ef3550,
            -8px 8px 3px #f48fb1,
            -12px 12px 3px #7e57c2,
            -16px 16px 3px #2196f3,
            -20px 20px 3px #26c6da,
            -24px 24px 3px #43a047,
            -28px 28px 3px #eeff41,
            -32px 32px 3px #f9a825,
            -36px 36px 3px #ff5722;
    }

    50% {
        text-shadow: 0px 0px 2px #fff,
            -4px 4px 3px #ef3550,
            8px 8px 3px #f48fb1,
            12px 12px 3px #7e57c2,
            16px 16px 3px #2196f3,
            20px 20px 3px #26c6da,
            24px 24px 3px #43a047,
            28px 28px 3px #eeff41,
            32px 32px 3px #f9a825,
            36px 36px 3px #ff5722;
    }

    65% {
        text-shadow: 0px 0px 2px #fff,
            -4px 4px 3px #ef3550,
            -8px 8px 3px #f48fb1,
            -12px 12px 3px #7e57c2,
            -16px 16px 3px #2196f3,
            -20px 20px 3px #26c6da,
            -24px 24px 3px #43a047,
            -28px 28px 3px #eeff41,
            -32px 32px 3px #f9a825,
            -36px 36px 3px #ff5722;
    }

    80% {
        text-shadow: 0px 0px 2px #fff,
            -8px 8px 3px #ef3550,
            -12px 12px 3px #f48fb1,
            -16px 16px 3px #7e57c2,
            -20px 20px 3px #2196f3,
            -24px 24px 3px #26c6da,
            -28px 28px 3px #43a047,
            -32px 32px 3px #eeff41,
            -36px 36px 3px #f9a825,
            -36px 36px 3px #ff5722;
    }

    100% {
        text-shadow: 0px 0px 2px #fff,
            -4px 4px 3px #ef3550,
            -8px 8px 3px #f48fb1,
            -12px 12px 3px #7e57c2,
            -16px 16px 3px #2196f3,
            -20px 20px 3px #26c6da,
            -24px 24px 3px #43a047,
            -28px 28px 3px #eeff41,
            -32px 32px 3px #f9a825,
            -36px 36px 3px #ff5722;
    }
}

h1 {
    font-family: Sinistre-StCaroline;
    margin-top:10px;
    margin-bottom: 50px;
    text-align: center;
    font-size: 4rem;
    letter-spacing: 0.15rem;
    text-transform: uppercase;
    color: transparent;
    text-shadow: 0px 0px 0px #fff,
        -4px 4px 3px #ef3550,
        -8px 8px 3px #f48fb1,
        -12px 12px 3px #7e57c2,
        -16px 16px 3px #2196f3,
        -20px 20px 3px #26c6da,
        -24px 24px 3px #43a047,
        -28px 28px 3px #eeff41,
        -32px 32px 3px #f9a825,
        -36px 36px 3px #ff5722;

    animation-name: rainbow;
    animation-duration: 10s;
    animation-iteration-count: infinite;
}

h2 {
    color: #f48fb1;
}

.bodytext {
    color: #fff;
    background-color: #282727;
    text-align: justify;
}

footer {
    background-color: #eeff41;
    color: black;
    position: fixed;
    bottom: 0;
    width: 100%;
    height: fit-content;
    text-align: center;
    text-decoration: none
}

